# emulator8080

./: .clang-format  .gitignore  TODO  conanfile.py  static_analysis.sh
cxxopts/: conanfile.py
emulator/: .dextool_mutate.toml  CMakeLists.txt  build.sh  test.sh
emulator/app/: CMakeLists.txt
emulator/app/include/: space_invaders.hpp
emulator/app/src/: cpudiag.cpp  disassemble.cpp  space_invaders.cpp  space_invaders_main.cpp
emulator/cmake/: CodeCoverage.cmake
emulator/lib/: CMakeLists.txt
emulator/lib/include/: cpu_8080.hpp  memory.hpp  smart_counter.hpp
emulator/lib/src/: cpu_8080.cpp  cpu_8080_branch.cpp  cpu_8080_logical.cpp  cpu_8080_math_add.cpp  cpu_8080_math_sub.cpp  cpu_8080_mov.cpp  cpu_8080_reg_misc.cpp  cpu_8080_reserved.cpp
emulator/test/: CMakeLists.txt  test_8080_add.cpp  test_8080_branch.cpp  test_8080_flags.cpp  test_8080_logical.cpp  test_8080_mem_mov.cpp  test_8080_memory.cpp  test_8080_reg_misc.cpp  test_8080_register_mov.cpp  test_8080_sub.cpp  test_class.cpp  test_class.hpp  test_main.cpp  test_memory.cpp  test_smart_counter.cpp
